--- a/Assets/UI Toolkit/GameScreen/StyleSheet.uss
+++ b/Assets/UI Toolkit/GameScreen/StyleSheet.uss
@@ -2,10 +2,13 @@
     width: 200px;
     height: 200px;
     background-color: rgba(255, 255, 255, 0);
-    background-image: url("project://database/Assets/Textures/UI/Btn-BoosterCircleStrock-Gold.png?fileID=2800000&guid=aa39dd680fc69554e9f905720210f139&type=3#Btn-BoosterCircleStrock-Gold");
+    background-image: url("project://database/Assets/Sprites/Btn-CircleBoosterGreen.png?fileID=2800000&guid=c8f56c135d390a24a8b7951aaf4fa9a7&type=3#Btn-CircleBoosterGreen");
     -unity-background-image-tint-color: rgb(255, 255, 255);
     border-left-color: rgba(0, 0, 0, 0);
     border-right-color: rgba(0, 0, 0, 0);
     border-top-color: rgba(0, 0, 0, 0);
     border-bottom-color: rgba(0, 0, 0, 0);
+    margin-right: 50px;
+    margin-left: 25px;
+    background-size: 90% 90%;
 }
